@@ -362,6 +362,18 @@ name|util
 operator|.
 name|concurrent
 operator|.
+name|ConcurrentHashMap
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
 name|CopyOnWriteArrayList
 import|;
 end_import
@@ -1139,12 +1151,19 @@ name|String
 argument_list|>
 name|finalParameters
 init|=
+name|Collections
+operator|.
+name|newSetFromMap
+argument_list|(
 operator|new
-name|HashSet
+name|ConcurrentHashMap
 argument_list|<
 name|String
+argument_list|,
+name|Boolean
 argument_list|>
 argument_list|()
+argument_list|)
 decl_stmt|;
 DECL|field|loadDefaults
 specifier|private
@@ -1254,7 +1273,7 @@ decl_stmt|;
 comment|/**    * Stores the mapping of key to the resource which modifies or loads     * the key most recently    */
 DECL|field|updatingResource
 specifier|private
-name|HashMap
+name|Map
 argument_list|<
 name|String
 argument_list|,
@@ -2795,7 +2814,7 @@ expr_stmt|;
 name|updatingResource
 operator|=
 operator|new
-name|HashMap
+name|ConcurrentHashMap
 argument_list|<
 name|String
 argument_list|,
@@ -2911,7 +2930,7 @@ operator|.
 name|updatingResource
 operator|=
 operator|new
-name|HashMap
+name|ConcurrentHashMap
 argument_list|<
 name|String
 argument_list|,
@@ -2928,11 +2947,25 @@ name|this
 operator|.
 name|finalParameters
 operator|=
+name|Collections
+operator|.
+name|newSetFromMap
+argument_list|(
 operator|new
-name|HashSet
+name|ConcurrentHashMap
 argument_list|<
 name|String
+argument_list|,
+name|Boolean
 argument_list|>
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|finalParameters
+operator|.
+name|addAll
 argument_list|(
 name|other
 operator|.
@@ -8397,15 +8430,35 @@ argument_list|>
 name|getFinalParameters
 parameter_list|()
 block|{
-return|return
-operator|new
-name|HashSet
+name|Set
 argument_list|<
 name|String
 argument_list|>
+name|setFinalParams
+init|=
+name|Collections
+operator|.
+name|newSetFromMap
+argument_list|(
+operator|new
+name|ConcurrentHashMap
+argument_list|<
+name|String
+argument_list|,
+name|Boolean
+argument_list|>
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|setFinalParams
+operator|.
+name|addAll
 argument_list|(
 name|finalParameters
 argument_list|)
+expr_stmt|;
+return|return
+name|setFinalParams
 return|;
 block|}
 DECL|method|getProps ()
@@ -8428,7 +8481,7 @@ operator|new
 name|Properties
 argument_list|()
 expr_stmt|;
-name|HashMap
+name|Map
 argument_list|<
 name|String
 argument_list|,
@@ -8438,7 +8491,7 @@ argument_list|>
 name|backup
 init|=
 operator|new
-name|HashMap
+name|ConcurrentHashMap
 argument_list|<
 name|String
 argument_list|,
@@ -8501,20 +8554,34 @@ operator|.
 name|getKey
 argument_list|()
 decl_stmt|;
-name|updatingResource
-operator|.
-name|put
-argument_list|(
-name|key
-argument_list|,
+name|String
+index|[]
+name|source
+init|=
 name|backup
 operator|.
 name|get
 argument_list|(
 name|key
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|source
+operator|!=
+literal|null
+condition|)
+block|{
+name|updatingResource
+operator|.
+name|put
+argument_list|(
+name|key
+argument_list|,
+name|source
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 block|}
@@ -10033,6 +10100,13 @@ argument_list|,
 name|value
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|source
+operator|!=
+literal|null
+condition|)
+block|{
 name|updatingResource
 operator|.
 name|put
@@ -10042,6 +10116,7 @@ argument_list|,
 name|source
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 elseif|else
 if|if
@@ -10078,6 +10153,10 @@ block|}
 if|if
 condition|(
 name|finalParameter
+operator|&&
+name|attr
+operator|!=
+literal|null
 condition|)
 block|{
 name|finalParameters
@@ -11020,6 +11099,13 @@ argument_list|(
 name|in
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|sources
+operator|!=
+literal|null
+condition|)
+block|{
 name|updatingResource
 operator|.
 name|put
@@ -11029,6 +11115,7 @@ argument_list|,
 name|sources
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 comment|//@Override
