@@ -8938,6 +8938,217 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+comment|/**    * A test to check whether this thread goes into infinite loop because of    * destruction of data structure by resize of Map. This problem was reported    * by SPARK-2546.    * @throws Exception    */
+DECL|method|testConcurrentAccesses ()
+specifier|public
+name|void
+name|testConcurrentAccesses
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|out
+operator|=
+operator|new
+name|BufferedWriter
+argument_list|(
+operator|new
+name|FileWriter
+argument_list|(
+name|CONFIG
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|startConfig
+argument_list|()
+expr_stmt|;
+name|declareProperty
+argument_list|(
+literal|"some.config"
+argument_list|,
+literal|"xyz"
+argument_list|,
+literal|"xyz"
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|endConfig
+argument_list|()
+expr_stmt|;
+name|Path
+name|fileResource
+init|=
+operator|new
+name|Path
+argument_list|(
+name|CONFIG
+argument_list|)
+decl_stmt|;
+name|Configuration
+name|conf
+init|=
+operator|new
+name|Configuration
+argument_list|()
+decl_stmt|;
+name|conf
+operator|.
+name|addResource
+argument_list|(
+name|fileResource
+argument_list|)
+expr_stmt|;
+class|class
+name|ConfigModifyThread
+extends|extends
+name|Thread
+block|{
+specifier|final
+specifier|private
+name|Configuration
+name|config
+decl_stmt|;
+specifier|final
+specifier|private
+name|String
+name|prefix
+decl_stmt|;
+specifier|public
+name|ConfigModifyThread
+parameter_list|(
+name|Configuration
+name|conf
+parameter_list|,
+name|String
+name|prefix
+parameter_list|)
+block|{
+name|config
+operator|=
+name|conf
+expr_stmt|;
+name|this
+operator|.
+name|prefix
+operator|=
+name|prefix
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|void
+name|run
+parameter_list|()
+block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|100000
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|config
+operator|.
+name|set
+argument_list|(
+literal|"some.config.value-"
+operator|+
+name|prefix
+operator|+
+name|i
+argument_list|,
+literal|"value"
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+name|ArrayList
+argument_list|<
+name|ConfigModifyThread
+argument_list|>
+name|threads
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|100
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|threads
+operator|.
+name|add
+argument_list|(
+operator|new
+name|ConfigModifyThread
+argument_list|(
+name|conf
+argument_list|,
+name|String
+operator|.
+name|valueOf
+argument_list|(
+name|i
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+for|for
+control|(
+name|Thread
+name|t
+range|:
+name|threads
+control|)
+block|{
+name|t
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+block|}
+for|for
+control|(
+name|Thread
+name|t
+range|:
+name|threads
+control|)
+block|{
+name|t
+operator|.
+name|join
+argument_list|()
+expr_stmt|;
+block|}
+comment|// If this test completes without going into infinite loop,
+comment|// it's expected behaviour.
+block|}
 DECL|method|main (String[] argv)
 specifier|public
 specifier|static
